--- a/projects/ngx-nomad-form/src/lib/components/button/button.component.html
+++ b/projects/ngx-nomad-form/src/lib/components/button/button.component.html
@@ -1,3 +1,3 @@
-<div class="mt-2 text-center d-grid gap-2 col-6 mx-auto"  [formGroup]="group">
+<div class="mt-2 text-center d-grid gap-2 mx-auto"  [formGroup]="group">
   <button type="submit" class="btn btn-block" [ngClass]="field?.color ? 'btn-' + field?.color : 'btn-primary'">{{field.label}}</button>
 </div>
