feature/more attribute
Add more attribute to component

--- a/projects/ngx-nomad-form/src/lib/components/check-box/check-box.component.html
+++ b/projects/ngx-nomad-form/src/lib/components/check-box/check-box.component.html
@@ -1,6 +1,11 @@
 <div class="form-check mt-2" [formGroup]="group">
   <label class="form-check-label">
-    <input type="checkbox" class="form-check-input" formControlName="{{ field.name }}">
+    <input
+      type="checkbox"
+      class="form-check-input"
+      formControlName="{{ field.name }}"
+      autofocus="{{ field.autofocus }}"
+      [readonly]="field.readonly">
     {{field.label}}
   </label>
 </div>
