--- a/projects/ngx-nomad-form/src/lib/components/input/input.component.html
+++ b/projects/ngx-nomad-form/src/lib/components/input/input.component.html
@@ -1,6 +1,16 @@
 <div class="form-group mt-2" [formGroup]="group">
   <label for="{{field.name}}">{{field.label}}</label>
-  <input [type]="field.inputType" class="form-control" formControlName="{{ field.name }}" [placeholder]="field.placeholder ?? ''" id="{{ field.name }}">
+  <input
+    [type]="field.inputType"
+    class="form-control"
+    formControlName="{{ field.name }}"
+    [placeholder]="field.placeholder ?? ''"
+    id="{{ field.name }}"
+    autocomplete="{{ field.autocomplete }}"
+    autofocus="{{ field.autofocus }}"
+    [readonly]="field.readonly"
+    [value]="field.value"
+    >
   <ng-container *ngFor="let validation of field.validations;">
     <small class="form-text text-danger" *ngIf="validate(field.name, validation.name)">{{validation.message}}</small>
   </ng-container>
