--- a/projects/ngx-nomad-form/src/lib/components/radio/radio.component.html
+++ b/projects/ngx-nomad-form/src/lib/components/radio/radio.component.html
@@ -1,7 +1,15 @@
 <div class="mt-2" [formGroup]="group">
   <label for="{{field.name}}">{{field.label}}</label>
   <div class="form-check" *ngFor="let item of field.options">
-    <input type="radio" class="form-check-input" formControlName="{{ field.name }}" [value]="item.value" id="{{ field.name }}">
+    <input
+      type="radio"
+      class="form-check-input"
+      formControlName="{{ field.name }}"
+      [value]="item.value"
+      id="{{ field.name }}"
+      autocomplete="{{ field.autocomplete }}"
+      autofocus="{{ field.autofocus }}"
+      [readonly]="field.readonly">
     <label class="form-check-label">
       {{item.label}}
     </label>
