--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="col-8 pt-2">
-      <nf-form [fields]="fields" [formConfig]="formConfig" (callBack)="callBack($event)"></nf-form>
+      <nf-form [fields]="fields" [formConfig]="formConfig" (callBack)="callBack($event)" (onChange)="change($event)"></nf-form>
       <div class="mt-3">
         <label for="json">Output</label>
         <textarea class="form-control" rows="10" [(ngModel)]="fieldInput"></textarea>
